[gd_scene load_steps=15 format=4 uid="uid://05splfhoqv4g"]

[ext_resource type="Texture2D" uid="uid://ry3ivri22pv3" path="res://Legacy-Fantasy - High Forest 2.3/Background/Background.png" id="1_bifqg"]
[ext_resource type="Script" path="res://platformer_lv_1.gd" id="1_ca4wb"]
[ext_resource type="TileSet" uid="uid://bnrbx34nnxitt" path="res://Legacy-Fantasy - High Forest 2.3/Assets/Tiles.tres" id="2_vyhh1"]
[ext_resource type="PackedScene" uid="uid://btvr2gykt5ai5" path="res://protag.tscn" id="3_wjqvj"]
[ext_resource type="PackedScene" uid="uid://decchefyuynfv" path="res://Legacy-Fantasy - High Forest 2.3/Assets/npc.tscn" id="4_imkra"]
[ext_resource type="Texture2D" uid="uid://xf5ee0roaxqq" path="res://Pixel Art Key Pack - Animated/Key 6/GOLD/Key 6 - GOLD - frame0000.png" id="5_25jat"]
[ext_resource type="PackedScene" uid="uid://bluiy7ssq0lma" path="res://Legacy-Fantasy - High Forest 2.3/Assets/chest.tscn" id="5_rrvsw"]
[ext_resource type="PackedScene" uid="uid://bnsthuviprawi" path="res://Legacy-Fantasy - High Forest 2.3/Assets/key.tscn" id="8_b5bi7"]
[ext_resource type="FontFile" uid="uid://bs36f72tu4jic" path="res://Legacy-Fantasy - High Forest 2.3/Assets/Sloop-ScriptThree.ttf" id="9_youlw"]
[ext_resource type="AudioStream" uid="uid://dunw43rpwm5y5" path="res://Music/battle-time-178551.mp3" id="10_ic3rc"]

[sub_resource type="Animation" id="Animation_40elh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HiddenLabels:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-32, -724)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HiddenLabels:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fhs1w"]
resource_name = "onDeath"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../HiddenLabels:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-32, -724), Vector2(-19, -540)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../HiddenLabels:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc4g6"]
_data = {
"RESET": SubResource("Animation_40elh"),
"onDeath": SubResource("Animation_fhs1w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nunvb"]
size = Vector2(3083, 20)

[node name="PlatformerLv1" type="Node2D"]
script = ExtResource("1_ca4wb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -99.0
offset_top = -46.0
offset_right = 1224.0
offset_bottom = 708.0

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(989.5, 332.5)
scale = Vector2(4.53125, 2.76838)
texture = ExtResource("1_bifqg")

[node name="Background2" type="Sprite2D" parent="."]
position = Vector2(-620, 333)
scale = Vector2(4.6661, 2.76037)
texture = ExtResource("1_bifqg")

[node name="Background3" type="Sprite2D" parent="."]
position = Vector2(18092.7, 1244.68)
scale = Vector2(21.7725, 7.61964)
texture = ExtResource("1_bifqg")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
light_mask = 3
visibility_layer = 3
tile_map_data = PackedByteArray("AAD//yQAAAADAAAAAAD//yUAAAADAAEAAAD//yYAAAADAAIAAAD//ycAAAADAAMAAAAAACQAAAADAAAAAAAAACUAAAADAAEAAAAAACYAAAADAAIAAAAAACcAAAADAAMAAAABACQAAAACAAAAAAABACUAAAACAAEAAAABACYAAAACAAIAAAABACcAAAACAAMAAAABACgAAAACAAMAAAACACQAAAADAAAAAAACACUAAAADAAEAAAACACYAAAADAAIAAAACACcAAAADAAMAAAACACgAAAADAAMAAAADACQAAAACAAAAAAADACUAAAACAAEAAAADACYAAAACAAIAAAADACcAAAACAAMAAAADACgAAAABAAMAAAAEACQAAAADAAAAAAAEACUAAAADAAEAAAAEACYAAAADAAIAAAAEACcAAAADAAMAAAAEACgAAAACAAMAAAAFACQAAAACAAAAAAAFACUAAAACAAEAAAAFACYAAAACAAIAAAAFACcAAAACAAMAAAAFACgAAAADAAMAAAAGACQAAAADAAAAAAAGACUAAAADAAEAAAAGACYAAAADAAIAAAAGACcAAAADAAMAAAAGACgAAAABAAMAAAAHACQAAAACAAAAAAAHACUAAAACAAEAAAAHACYAAAACAAIAAAAHACcAAAACAAMAAAAHACgAAAACAAMAAAAIACQAAAADAAAAAAAIACUAAAADAAEAAAAIACYAAAADAAIAAAAIACcAAAADAAMAAAAIACgAAAADAAMAAAAJACQAAAABAAAAAAAJACUAAAABAAEAAAAJACYAAAABAAIAAAAJACcAAAABAAMAAAAJACgAAAABAAMAAAAKACQAAAACAAAAAAAKACUAAAACAAEAAAAKACYAAAACAAIAAAAKACcAAAACAAMAAAAKACgAAAACAAMAAAALACQAAAADAAAAAAALACUAAAADAAEAAAALACYAAAADAAIAAAALACcAAAADAAMAAAALACgAAAABAAMAAAAMACQAAAABAAAAAAAMACUAAAABAAEAAAAMACYAAAABAAIAAAAMACcAAAABAAMAAAAMACgAAAACAAMAAAANACQAAAACAAAAAAANACUAAAACAAEAAAANACYAAAACAAIAAAANACcAAAACAAMAAAANACgAAAADAAMAAAAOACQAAAADAAAAAAAOACUAAAADAAEAAAAOACYAAAADAAIAAAAOACcAAAADAAMAAAAOACgAAAABAAMAAAAPACQAAAABAAAAAAAPACUAAAABAAEAAAAPACYAAAABAAIAAAAPACcAAAABAAMAAAAPACgAAAACAAMAAAAQACQAAAACAAAAAAAQACUAAAACAAEAAAAQACYAAAACAAIAAAAQACcAAAACAAMAAAAQACgAAAABAAMAAAARACQAAAADAAAAAAARACUAAAADAAEAAAARACYAAAADAAIAAAARACcAAAADAAMAAAARACgAAAABAAMAAAASACQAAAABAAAAAAASACUAAAABAAEAAAASACYAAAABAAIAAAASACcAAAABAAMAAAASACgAAAACAAMAAAATACQAAAACAAAAAAATACUAAAACAAEAAAATACYAAAACAAIAAAATACcAAAACAAMAAAATACgAAAABAAMAAAAUACQAAAADAAAAAAAUACUAAAADAAEAAAAUACYAAAADAAIAAAAUACcAAAADAAMAAAAUACgAAAACAAMAAAAVACQAAAABAAAAAAAVACUAAAABAAEAAAAVACYAAAABAAIAAAAVACcAAAABAAMAAAAVACgAAAABAAMAAAAWACQAAAACAAAAAAAWACUAAAACAAEAAAAWACYAAAACAAIAAAAWACcAAAACAAMAAAAWACgAAAACAAMAAAAXACQAAAADAAAAAAAXACUAAAADAAEAAAAXACYAAAADAAIAAAAXACcAAAABAAMAAAAXACgAAAABAAMAAAAYACQAAAABAAAAAAAYACUAAAABAAEAAAAYACYAAAABAAIAAAAYACcAAAACAAMAAAAYACgAAAACAAMAAAAZACQAAAACAAAAAAAZACUAAAACAAEAAAAZACYAAAACAAIAAAAZACcAAAADAAMAAAAZACgAAAABAAMAAAAaACQAAAADAAAAAAAaACUAAAADAAEAAAAaACYAAAADAAIAAAAaACcAAAABAAMAAAAaACgAAAACAAMAAAAbACQAAAABAAAAAAAbACUAAAABAAEAAAAbACYAAAABAAIAAAAbACcAAAACAAMAAAAbACgAAAADAAMAAAAcACQAAAACAAAAAAAcACUAAAACAAEAAAAcACYAAAACAAIAAAAcACcAAAADAAMAAAAcACgAAAABAAMAAAAdACQAAAADAAAAAAAdACUAAAADAAEAAAAdACYAAAADAAIAAAAdACcAAAABAAMAAAAdACgAAAABAAMAAAAeACQAAAABAAAAAAAeACUAAAABAAEAAAAeACYAAAABAAIAAAAeACcAAAACAAMAAAAeACgAAAACAAMAAAAfACQAAAACAAAAAAAfACUAAAACAAEAAAAfACYAAAACAAIAAAAfACcAAAADAAMAAAAfACgAAAADAAMAAAAgACQAAAAEAAAAAAAgACUAAAAEAAEAAAAgACYAAAAEAAIAAAAgACcAAAAEAAMAAAAgACgAAAAEAAMAAAAmACQAAAAAAAAAAAAmACUAAAAAAAEAAAAmACYAAAAAAAIAAAAmACcAAAAAAAMAAAAmACgAAAAAAAMAAAAnACQAAAABAAAAAAAnACUAAAABAAEAAAAnACYAAAABAAIAAAAnACcAAAABAAMAAAAnACgAAAABAAMAAAAoACQAAAACAAAAAAAoACUAAAACAAEAAAAoACYAAAACAAIAAAAoACcAAAACAAMAAAAoACgAAAACAAMAAAApACQAAAADAAAAAAApACUAAAADAAEAAAApACYAAAADAAIAAAApACcAAAADAAMAAAApACgAAAADAAMAAAAqACQAAAABAAAAAAAqACUAAAABAAEAAAAqACYAAAABAAIAAAAqACcAAAABAAMAAAAqACgAAAABAAMAAAArACQAAAACAAAAAAArACUAAAACAAEAAAArACYAAAACAAIAAAArACcAAAACAAMAAAArACgAAAACAAMAAAAsACQAAAADAAAAAAAsACUAAAADAAEAAAAsACYAAAADAAIAAAAsACcAAAADAAMAAAAsACgAAAADAAMAAAAtACQAAAABAAAAAAAtACUAAAABAAEAAAAtACYAAAABAAIAAAAtACcAAAABAAMAAAAtACgAAAABAAMAAAAuACQAAAABAAAAAAAuACUAAAABAAEAAAAuACYAAAABAAIAAAAuACcAAAABAAMAAAAuACgAAAACAAMAAAAvACQAAAACAAAAAAAvACUAAAACAAEAAAAvACYAAAACAAIAAAAvACcAAAACAAMAAAAvACgAAAADAAMAAAAwACQAAAABAAAAAAAwACUAAAABAAEAAAAwACYAAAABAAIAAAAwACcAAAABAAMAAAAwACgAAAABAAMAAAAxACQAAAACAAAAAAAxACUAAAACAAEAAAAxACYAAAACAAIAAAAxACcAAAACAAMAAAAxACgAAAACAAMAAAAyACQAAAADAAAAAAAyACUAAAADAAEAAAAyACYAAAADAAIAAAAyACcAAAADAAMAAAAyACgAAAADAAMAAAAzACQAAAABAAAAAAAzACUAAAABAAEAAAAzACYAAAABAAIAAAAzACcAAAABAAMAAAAzACgAAAABAAMAAAA0ACQAAAACAAAAAAA0ACUAAAACAAEAAAA0ACYAAAACAAIAAAA0ACcAAAACAAMAAAA0ACgAAAACAAMAAAA1ACQAAAADAAAAAAA1ACUAAAADAAEAAAA1ACYAAAADAAIAAAA1ACcAAAADAAMAAAA1ACgAAAADAAMAAAA2ACQAAAABAAAAAAA2ACUAAAABAAEAAAA2ACYAAAABAAIAAAA2ACcAAAABAAMAAAA2ACgAAAABAAMAAAA3ACQAAAACAAAAAAA3ACUAAAACAAEAAAA3ACYAAAACAAIAAAA3ACcAAAACAAMAAAA3ACgAAAACAAMAAAA4ACQAAAADAAAAAAA4ACUAAAADAAEAAAA4ACYAAAADAAIAAAA4ACcAAAADAAMAAAA4ACgAAAADAAMAAAA5ACQAAAABAAAAAAA5ACUAAAABAAEAAAA5ACYAAAABAAIAAAA5ACcAAAABAAMAAAA5ACgAAAABAAMAAAA6ACQAAAACAAAAAAA6ACUAAAACAAEAAAA6ACYAAAACAAIAAAA6ACcAAAACAAMAAAA6ACgAAAACAAMAAAA7ACQAAAABAAAAAAA7ACUAAAABAAEAAAA7ACYAAAABAAIAAAA7ACcAAAABAAMAAAA7ACgAAAADAAMAAAA8ACQAAAACAAAAAAA8ACUAAAACAAEAAAA8ACYAAAACAAIAAAA8ACcAAAACAAMAAAA8ACgAAAABAAMAAAA9ACQAAAADAAAAAAA9ACUAAAADAAEAAAA9ACYAAAADAAIAAAA9ACcAAAADAAMAAAA9ACgAAAACAAMAAAA+ACQAAAABAAAAAAA+ACUAAAABAAEAAAA+ACYAAAABAAIAAAA+ACcAAAABAAMAAAA+ACgAAAADAAMAAAA/ACQAAAACAAAAAAA/ACUAAAACAAEAAAA/ACYAAAACAAIAAAA/ACcAAAACAAMAAAA/ACgAAAABAAMAAABAACQAAAADAAAAAABAACUAAAADAAEAAABAACYAAAADAAIAAABAACcAAAADAAMAAABAACgAAAACAAMAAABBACQAAAABAAAAAABBACUAAAABAAEAAABBACYAAAABAAIAAABBACcAAAABAAMAAABBACgAAAADAAMAAABCACQAAAACAAAAAABCACUAAAACAAEAAABCACYAAAACAAIAAABCACcAAAACAAMAAABCACgAAAABAAMAAABDACUAAAACAAEAAABDACYAAAABAAIAAABDACcAAAABAAMAAABDACgAAAACAAMAAABEACUAAAABAAEAAABEACYAAAACAAIAAABEACcAAAACAAMAAABEACgAAAADAAMAAABFACUAAAACAAEAAABFACYAAAABAAIAAABFACcAAAABAAMAAABFACgAAAABAAMAAABGACUAAAADAAEAAABGACYAAAACAAIAAABGACcAAAACAAMAAABGACgAAAACAAMAAABHACUAAAADAAEAAABHACYAAAABAAcAAABHACcAAAABAAgAAABHACgAAAABAAgAAABIACQAAAAAAAMAAABIACUAAAABAAgAAABIACYAAAACAAcAAABIACcAAAACAAgAAABIACgAAAACAAgAAAD//ygAAAACAAMAAAAAACgAAAADAAMAAAD+/yQAAAACAAAAAAD+/yUAAAACAAEAAAD+/yYAAAACAAIAAAD+/ycAAAACAAMAAAD+/ygAAAABAAMAAAD7/yQAAAACAAAAAAD7/yUAAAACAAEAAAD7/yYAAAACAAIAAAD7/ycAAAACAAMAAAD7/ygAAAABAAMAAAD8/yQAAAADAAAAAAD8/yUAAAADAAEAAAD8/yYAAAADAAIAAAD8/ycAAAADAAMAAAD8/ygAAAACAAMAAAD9/yQAAAABAAAAAAD9/yUAAAABAAEAAAD9/yYAAAABAAIAAAD9/ycAAAABAAMAAAD9/ygAAAADAAMAAAD4/yQAAAACAAAAAAD4/yUAAAACAAEAAAD4/yYAAAACAAIAAAD4/ycAAAACAAMAAAD4/ygAAAABAAMAAAD5/yQAAAADAAAAAAD5/yUAAAADAAEAAAD5/yYAAAADAAIAAAD5/ycAAAADAAMAAAD5/ygAAAACAAMAAAD6/yQAAAABAAAAAAD6/yUAAAABAAEAAAD6/yYAAAABAAIAAAD6/ycAAAABAAMAAAD6/ygAAAADAAMAAAD1/yQAAAACAAAAAAD1/yUAAAACAAEAAAD1/yYAAAACAAIAAAD1/ycAAAACAAMAAAD1/ygAAAABAAMAAAD2/yQAAAADAAAAAAD2/yUAAAADAAEAAAD2/yYAAAADAAIAAAD2/ycAAAADAAMAAAD2/ygAAAACAAMAAAD3/yQAAAABAAAAAAD3/yUAAAABAAEAAAD3/yYAAAABAAIAAAD3/ycAAAABAAMAAAD3/ygAAAADAAMAAADy/yQAAAACAAAAAADy/yUAAAACAAEAAADy/yYAAAACAAIAAADy/ycAAAACAAMAAADy/ygAAAABAAMAAADz/yQAAAADAAAAAADz/yUAAAADAAEAAADz/yYAAAADAAIAAADz/ycAAAADAAMAAADz/ygAAAACAAMAAAD0/yQAAAABAAAAAAD0/yUAAAABAAEAAAD0/yYAAAABAAIAAAD0/ycAAAABAAMAAAD0/ygAAAADAAMAAADv/yQAAAACAAAAAADv/yUAAAACAAEAAADv/yYAAAACAAIAAADv/ycAAAACAAMAAADv/ygAAAABAAMAAADw/yQAAAADAAAAAADw/yUAAAADAAEAAADw/yYAAAADAAIAAADw/ycAAAADAAMAAADw/ygAAAACAAMAAADx/yQAAAABAAAAAADx/yUAAAABAAEAAADx/yYAAAABAAIAAADx/ycAAAABAAMAAADx/ygAAAADAAMAAADu/yQAAAABAAAAAADu/yUAAAABAAEAAADu/yYAAAABAAIAAADu/ycAAAABAAMAAADr/yQAAAADAAIAAADr/yUAAAACAAcAAADr/yYAAAACAAgAAADr/ycAAAADAAcAAADs/yQAAAAEAAIAAADs/yUAAAADAAcAAADs/ycAAAACAAcAAADt/yQAAAADAAAAAADt/yUAAAADAAEAAADt/yYAAAADAAcAAADt/ycAAAADAAcAAADs/ygAAAACAAgAAADt/ygAAAADAAgAAADu/ygAAAADAAMAAADp/ygAAAADAAgAAADq/ygAAAACAAgAAADr/ygAAAADAAgAAADp/ycAAAADAAcAAADq/ycAAAACAAcAAADp/yYAAAABAAIAAADq/yYAAAACAAIAAADp/yUAAAABAAMAAADq/yUAAAACAAMAAADp/yQAAAABAAIAAADq/yQAAAACAAIAAADp/yMAAAABAAMAAADq/yMAAAACAAMAAADr/yMAAAADAAMAAADp/yIAAAABAAIAAADq/yIAAAACAAIAAADr/yIAAAADAAIAAADp/yEAAAABAAMAAADq/yEAAAACAAMAAADr/yEAAAADAAMAAADp/yAAAAABAAIAAADq/yAAAAACAAIAAADr/yAAAAADAAIAAADp/x8AAAABAAMAAADq/x8AAAACAAMAAADr/x8AAAADAAMAAADp/x4AAAABAAIAAADq/x4AAAACAAIAAADr/x4AAAADAAIAAADp/x0AAAABAAMAAADq/x0AAAACAAMAAADr/x0AAAADAAMAAADp/xwAAAABAAIAAADq/xwAAAACAAIAAADr/xwAAAADAAIAAADp/xsAAAABAAMAAADq/xsAAAACAAMAAADr/xsAAAADAAMAAADp/xoAAAABAAIAAADq/xoAAAACAAIAAADr/xoAAAADAAIAAADp/xkAAAABAAMAAADq/xkAAAACAAMAAADr/xkAAAADAAMAAADp/xgAAAABAAIAAADq/xgAAAACAAIAAADr/xgAAAADAAIAAADp/xcAAAABAAMAAADq/xcAAAACAAMAAADr/xcAAAADAAMAAADp/xYAAAABAAIAAADq/xYAAAACAAIAAADr/xYAAAADAAIAAADp/xUAAAABAAMAAADq/xUAAAACAAMAAADr/xUAAAADAAMAAADp/xQAAAABAAIAAADq/xQAAAACAAIAAADr/xQAAAADAAIAAADp/xMAAAABAAMAAADq/xMAAAACAAMAAADr/xMAAAADAAMAAADp/xIAAAABAAIAAADq/xIAAAACAAIAAADr/xIAAAADAAIAAADp/xEAAAABAAMAAADq/xEAAAACAAMAAADr/xEAAAADAAMAAADp/xAAAAABAAIAAADq/xAAAAACAAIAAADr/xAAAAADAAIAAADp/w8AAAABAAMAAADq/w8AAAACAAMAAADr/w8AAAADAAMAAADp/wwAAAABAAAAAADp/w0AAAABAAEAAADp/w4AAAABAAIAAADq/wwAAAACAAAAAADq/w0AAAACAAEAAADq/w4AAAACAAIAAADr/wwAAAADAAAAAADr/w0AAAADAAEAAADr/w4AAAADAAIAAADs/wwAAAAEAAAAAADs/w0AAAAEAAEAAADs/w4AAAAEAAIAAADs/w8AAAAEAAMAAADs/xAAAAAEAAIAAADs/xEAAAAEAAMAAADs/xIAAAAEAAIAAADs/xMAAAAEAAMAAADs/xQAAAAEAAIAAADs/xUAAAAEAAMAAADs/xYAAAAEAAIAAADs/xcAAAAEAAMAAADs/xgAAAAEAAIAAADs/xkAAAAEAAMAAADs/xoAAAAEAAIAAADs/xsAAAAEAAMAAADs/xwAAAAEAAIAAADs/x0AAAAEAAMAAADs/x4AAAAEAAIAAADs/x8AAAAEAAMAAADs/yAAAAAEAAIAAADs/yEAAAAEAAMAAADs/yIAAAAEAAIAAADs/yMAAAAEAAMAAADo/xkAAAAAAAgAAADo/xoAAAAAAAcAAADn/xoAAAARAA0AAADo/xsAAAAAAAgAAADo/wwAAAAAAAAAAADo/w0AAAAAAAEAAADo/w4AAAAAAAcAAADo/w8AAAAAAAgAAADo/xAAAAAAAAcAAADo/xEAAAAAAAgAAADo/xIAAAAAAAcAAADo/xMAAAAAAAgAAADo/xQAAAAAAAcAAADo/xUAAAAAAAgAAADo/xYAAAAAAAcAAADo/xcAAAAAAAgAAADo/xgAAAAAAAcAAADo/xwAAAAAAAcAAADo/x0AAAAAAAgAAADo/x4AAAAAAAcAAADo/x8AAAAAAAgAAADo/yAAAAAAAAcAAADo/yEAAAAAAAgAAADo/yIAAAAAAAcAAADo/yMAAAAAAAgAAADo/yQAAAAAAAcAAADo/yUAAAAAAAgAAADo/yYAAAAAAAcAAADo/ycAAAAAAAgAAADo/ygAAAAAAAcAAADo/ykAAAAAAAgAAADp/ykAAAABAAMAAADq/ykAAAACAAMAAADr/ykAAAADAAMAAADs/ykAAAAEAAMAAADs/yYAAAADAAgAAABJACQAAAABAAMAAABJACUAAAABAAIAAABJACYAAAADAAcAAABJACcAAAADAAgAAABJACgAAAADAAgAAABKACQAAAACAAMAAABKACUAAAACAAIAAABKACYAAAACAAMAAABKACcAAAACAAIAAABKACgAAAACAAMAAABLACQAAAADAAMAAABLACUAAAADAAIAAABLACYAAAADAAMAAABLACcAAAADAAIAAABLACgAAAADAAMAAABMACQAAAAEAAMAAABMACUAAAAEAAIAAABMACYAAAAEAAMAAABMACcAAAAEAAIAAABMACgAAAAEAAMAAABIAB8AAAAAAAIAAABIACAAAAAAAAMAAABIACEAAAAAAAIAAABIACIAAAAAAAMAAABIACMAAAAAAAIAAABJAB8AAAABAAIAAABJACAAAAABAAMAAABJACEAAAABAAIAAABJACIAAAABAAMAAABJACMAAAABAAIAAABKAB8AAAACAAIAAABKACAAAAACAAMAAABKACEAAAACAAIAAABKACIAAAACAAMAAABKACMAAAACAAIAAABLAB8AAAADAAIAAABLACAAAAADAAMAAABLACEAAAADAAIAAABLACIAAAADAAMAAABLACMAAAADAAIAAABMAB8AAAAEAAIAAABMACAAAAAEAAMAAABMACEAAAAEAAIAAABMACIAAAAEAAMAAABMACMAAAAEAAIAAABIABoAAAAAAAMAAABIABsAAAAAAAIAAABIABwAAAAAAAMAAABIAB0AAAAAAAIAAABIAB4AAAAAAAMAAABJABoAAAABAAMAAABJABsAAAABAAIAAABJABwAAAABAAMAAABJAB0AAAABAAIAAABJAB4AAAABAAMAAABKABoAAAACAAMAAABKABsAAAACAAIAAABKABwAAAACAAMAAABKAB0AAAACAAIAAABKAB4AAAACAAMAAABLABoAAAADAAMAAABLABsAAAADAAIAAABLABwAAAADAAMAAABLAB0AAAADAAIAAABLAB4AAAADAAMAAABMABoAAAAEAAMAAABMABsAAAAEAAIAAABMABwAAAAEAAMAAABMAB0AAAAEAAIAAABMAB4AAAAEAAMAAABIABUAAAAAAAIAAABIABYAAAAAAAMAAABIABcAAAAAAAIAAABIABgAAAAAAAMAAABIABkAAAAAAAIAAABJABUAAAABAAIAAABJABYAAAABAAMAAABJABcAAAABAAIAAABJABgAAAABAAMAAABJABkAAAABAAIAAABKABUAAAACAAIAAABKABYAAAACAAMAAABKABcAAAACAAIAAABKABgAAAACAAMAAABKABkAAAACAAIAAABLABUAAAADAAIAAABLABYAAAADAAMAAABLABcAAAADAAIAAABLABgAAAADAAMAAABLABkAAAADAAIAAABMABUAAAAEAAIAAABMABYAAAAEAAMAAABMABcAAAAEAAIAAABMABgAAAAEAAMAAABMABkAAAAEAAIAAABIABAAAAAAAAMAAABIABEAAAAAAAIAAABIABIAAAAAAAMAAABIABMAAAAAAAIAAABIABQAAAAAAAMAAABJABAAAAABAAMAAABJABEAAAABAAIAAABJABIAAAABAAMAAABJABMAAAABAAIAAABJABQAAAABAAMAAABKABAAAAACAAMAAABKABEAAAACAAIAAABKABIAAAACAAMAAABKABMAAAACAAIAAABKABQAAAACAAMAAABLABAAAAADAAMAAABLABEAAAADAAIAAABLABIAAAADAAMAAABLABMAAAADAAIAAABLABQAAAADAAMAAABMABAAAAAEAAMAAABMABEAAAAEAAIAAABMABIAAAAEAAMAAABMABMAAAAEAAIAAABMABQAAAAEAAMAAABIAAsAAAAAAAIAAABIAAwAAAAAAAMAAABIAA0AAAAAAAIAAABIAA4AAAAAAAMAAABIAA8AAAAAAAIAAABJAAsAAAABAAIAAABJAAwAAAABAAMAAABJAA0AAAABAAIAAABJAA4AAAABAAMAAABJAA8AAAABAAIAAABKAAsAAAACAAIAAABKAAwAAAACAAMAAABKAA0AAAACAAIAAABKAA4AAAACAAMAAABKAA8AAAACAAIAAABLAAsAAAADAAIAAABLAAwAAAADAAMAAABLAA0AAAADAAIAAABLAA4AAAADAAMAAABLAA8AAAADAAIAAABMAAsAAAAEAAIAAABMAAwAAAAEAAMAAABMAA0AAAAEAAIAAABMAA4AAAAEAAMAAABMAA8AAAAEAAIAAABIAAYAAAAAAAAAAABIAAcAAAAAAAEAAABIAAgAAAAAAAIAAABIAAkAAAAAAAIAAABIAAoAAAAAAAMAAABJAAYAAAABAAAAAABJAAcAAAABAAEAAABJAAgAAAABAAIAAABJAAkAAAABAAIAAABJAAoAAAABAAMAAABKAAYAAAACAAAAAABKAAcAAAACAAEAAABKAAgAAAACAAIAAABKAAkAAAACAAIAAABKAAoAAAACAAMAAABLAAYAAAADAAAAAABLAAcAAAADAAEAAABLAAgAAAADAAIAAABLAAkAAAADAAIAAABLAAoAAAADAAMAAABMAAYAAAAEAAAAAABMAAcAAAAEAAEAAABMAAgAAAAEAAIAAABMAAkAAAAEAAIAAABMAAoAAAAEAAMAAABEACQAAAABAAAAAABFACQAAAACAAAAAABGACQAAAADAAAAAABHACQAAAADAAAAAABDACQAAAACAAAAAAA=")
tile_set = ExtResource("2_vyhh1")
use_kinematic_bodies = true

[node name="NPC" parent="." instance=ExtResource("4_imkra")]
position = Vector2(-331, 1)

[node name="Protag" parent="." instance=ExtResource("3_wjqvj")]
position = Vector2(48, 181)

[node name="Chest" parent="." instance=ExtResource("5_rrvsw")]

[node name="Key" parent="." instance=ExtResource("8_b5bi7")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 16.0
offset_right = 64.0
offset_bottom = 56.0

[node name="KeyCounter" type="Label" parent="HUD/Control"]
layout_mode = 0
offset_left = -4.0
offset_top = -20.0
offset_right = 57.0
offset_bottom = 63.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.988235, 0.67451, 0.266667, 1)
theme_override_font_sizes/font_size = 60
text = "0"

[node name="KeyLabelSprt" type="Sprite2D" parent="HUD/Control"]
position = Vector2(-15.5, 2.25)
scale = Vector2(0.9375, 0.842857)
texture = ExtResource("5_25jat")

[node name="HiddenLabels" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -724.0
offset_right = 8.0
offset_bottom = -684.0

[node name="ControllerPlayer" type="AnimationPlayer" parent="HUD/HiddenLabels"]
root_node = NodePath("../../../HUD/Control")
libraries = {
"": SubResource("AnimationLibrary_jc4g6")
}

[node name="RepeatLv" type="Button" parent="HUD/HiddenLabels"]
layout_mode = 0
offset_left = 432.0
offset_top = 747.0
offset_right = 789.0
offset_bottom = 840.0
theme_override_fonts/font = ExtResource("9_youlw")
theme_override_font_sizes/font_size = 40
text = "Play Level Again"

[node name="MainMenu" type="Button" parent="HUD/HiddenLabels"]
layout_mode = 0
offset_left = 436.0
offset_top = 870.0
offset_right = 792.0
offset_bottom = 962.0
theme_override_fonts/font = ExtResource("9_youlw")
theme_override_font_sizes/font_size = 40
text = "Main Menu"

[node name="Lv1Music" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("10_ic3rc")
volume_db = -10.0
autoplay = true

[node name="FallCheck" type="Area2D" parent="."]

[node name="FallCol" type="CollisionShape2D" parent="FallCheck"]
position = Vector2(607, 940)
shape = SubResource("RectangleShape2D_nunvb")

[connection signal="body_entered" from="NPC" to="." method="_on_npc_body_entered"]
[connection signal="body_exited" from="NPC" to="." method="_on_npc_body_exited"]
[connection signal="body_entered" from="Chest" to="." method="_on_chest_body_entered"]
[connection signal="body_entered" from="Chest" to="Protag" method="_on_chest_body_entered"]
[connection signal="body_exited" from="Chest" to="." method="_on_chest_body_exited"]
[connection signal="body_exited" from="Chest" to="Protag" method="_on_chest_body_exited"]
[connection signal="body_entered" from="Key" to="Protag" method="_on_key_body_entered"]
[connection signal="pressed" from="HUD/HiddenLabels/RepeatLv" to="." method="_on_repeat_lv_pressed"]
[connection signal="pressed" from="HUD/HiddenLabels/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="body_entered" from="FallCheck" to="." method="_on_fall_check_body_entered"]
[connection signal="body_entered" from="FallCheck" to="Protag" method="_on_fall_check_body_entered"]
